--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,15 @@
-flask==3.0.0
-flask-cors==4.0.0
-gunicorn==23.0.0
-requests==2.31.0
-gspread==6.0.0
-google-auth==2.23.4
-google-auth-oauthlib==1.1.0
-google-auth-httplib2==0.1.1
-python-dotenv==1.0.0
-apscheduler==3.10.4
-beautifulsoup4==4.12.2
-pandas==2.1.3
-trafilatura==1.7.0
-urllib3==2.1.0
-PyGithub
-numpy
-pandas
+flask>=3.1.2
+flask-cors>=6.0.1
+gunicorn>=23.0.0
+requests>=2.32.5
+gspread>=6.2.1
+google-auth>=2.40.3
+google-auth-oauthlib>=1.2.2
+google-auth-httplib2>=0.2.0
+python-dotenv>=1.1.1
+apscheduler>=3.11.0
+beautifulsoup4>=4.13.5
+pandas>=2.3.2
+trafilatura>=2.0.0
+urllib3>=2.5.0
+PyGithub>=2.0.0
